v1.2.4 - Invites refactored, Users soft-delete, clean-up
